--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "tsc && vite build",
+    "preview": "vite preview",
+    "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@emotion/babel-plugin": "^11.13.5",
+    "@emotion/react": "^11.14.0",
     "axios": "^1.13.2",
     "date-fns": "^4.1.0",
     "dompurify": "^3.3.0",
@@ -20,14 +23,17 @@
     "react-use": "^17.6.0"
   },
   "devDependencies": {
+    "@types/node": "^24.10.0",
     "@types/react": "^18.3.26",
     "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react": "^5.1.0",
     "autoprefixer": "10.4.19",
     "postcss": "8.4.38",
+    "rollup-plugin-visualizer": "^6.0.5",
     "tailwindcss": "3.4.13",
     "typescript": "^5.9.3",
-    "vite": "^7.1.12"
+    "vite": "^7.2.0",
+    "vite-plugin-pwa": "^1.1.0"
   },
   "browserslist": [
     ">0.2%",
