--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -34,18 +34,7 @@
     Referrer-Policy = "strict-origin-when-cross-origin"
     
     # Content Security Policy (CSP)
-    Content-Security-Policy = """
-      default-src 'self';
-      script-src 'self' 'unsafe-inline' 'unsafe-eval' https://unpkg.com;
-      style-src 'self' 'unsafe-inline' https://fonts.googleapis.com;
-      img-src 'self' data: https:;
-      font-src 'self' data: https://fonts.gstatic.com;
-      connect-src 'self' https://your-backend-url.onrender.com https://*.google-analytics.com;
-      frame-ancestors 'none';
-      form-action 'self';
-      base-uri 'self';
-      object-src 'none';
-    """.replace(/\s+/g, ' ').trim()
+    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval' https://unpkg.com; style-src 'self' 'unsafe-inline' https://fonts.googleapis.com; img-src 'self' data: https:; font-src 'self' data: https://fonts.gstatic.com; connect-src 'self' https://your-backend-url.onrender.com https://*.google-analytics.com; frame-ancestors 'none'; form-action 'self'; base-uri 'self'; object-src 'none';"
     
     # Performance optimizations
     X-DNS-Prefetch-Control = "on"
