--- a/frontend/netlify.toml
+++ b/frontend/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  base = "frontend"
+  base = "."
   publish = "dist"
   command = "npm install && npm run build"
 
@@ -17,7 +17,7 @@
 # API proxy configuration - update this with your actual backend URL
 [[redirects]]
   from = "/api/*"
-  to = "https://your-backend-url.onrender.com/api/:splat"
+  to = "https://recosys-nfaz.onrender.com/api/:splat"
   status = 200
   force = true
 
@@ -29,10 +29,10 @@
     X-Content-Type-Options = "nosniff"
     X-XSS-Protection = "1; mode=block"
     Referrer-Policy = "strict-origin-when-cross-origin"
-    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self' https://your-backend-url.onrender.com;"
+    Content-Security-Policy = "default-src 'self'; script-src 'self' 'unsafe-inline' 'unsafe-eval'; style-src 'self' 'unsafe-inline'; img-src 'self' data: https:; font-src 'self' data:; connect-src 'self' https://recosys-nfaz.onrender.com;"
 
 [dev]
-  command = "cd frontend && npm run dev"
+  command = "npm run dev"
   targetPort = 5173
   publish = "dist"
   port = 5173
